# leptos-i18n

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
examples/cookie-csr/: Cargo.toml  README.md
examples/cookie-csr/end2end/: playwright.config.ts
examples/cookie-csr/end2end/tests/: i18n.spec.ts
examples/cookie-csr/src/: main.rs
examples/hardcoded-csr/: README.md
examples/hardcoded-csr/end2end/: package.json  playwright.config.ts
examples/hardcoded-csr/end2end/tests/: i18n.spec.ts
examples/hardcoded-csr/src/: main.rs
examples/hardcoded-reactive-csr/: Cargo.toml  README.md
examples/hardcoded-reactive-csr/src/: main.rs
examples/navigator-languages-cookie-csr/: Cargo.toml  README.md
examples/navigator-languages-cookie-csr/end2end/tests/: i18n.spec.ts
examples/navigator-languages-cookie-csr/src/: main.rs
examples/navigator-languages-localstorage-csr/: Cargo.toml  README.md  index.html
examples/navigator-languages-localstorage-csr/end2end/: playwright.config.ts
examples/navigator-languages-localstorage-csr/end2end/tests/: i18n.spec.ts
examples/navigator-languages-localstorage-csr/src/: main.rs
examples/shared/: Cargo.toml  README.md
examples/shared/src/: lib.rs
