[package]
name = "hardcoded-reactive-csr"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = "0.2.4"
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
strum = { version = "0.24", features = ["derive"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
web-sys ="0.3"

